@startuml
class OwnerController {
}
interface IOwnerController {
}
class ClientService {
}
interface IClientService {
}
interface IClientRepository {
}
interface IClientController {
}
interface IOwnerRepository {
}
interface IOwnerService {
}
class ClientController {
}
class OwnerService {
}


IOwnerController <|.. OwnerController
IClientService <|.. ClientService
JpaRepository <|-- IClientRepository
JpaRepository <|-- IOwnerRepository
IClientController <|.. ClientController
IOwnerService <|.. OwnerService
@enduml